css/style.css
body {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #f0f0f0;
    font-family: 'Segoe UI', sans-serif;
    font-weight: bold;
}

.hero {
    margin: 30px;
    padding: 10px;
    color: #333333;
    font-size: 20px;
}

h1 {
    margin: 0px;
}

.calculator {
    width: 400px;
    height: 600px;
    margin: 15px;
    border: 2px solid #cccccc;
    border-radius: 30px;
    padding: 30px;
    background-color: #ffffff;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.display {
    box-sizing: border-box;
    width: 100%;
    height: 200px;
    margin-bottom: 20px;
    padding: 20px;
    border-radius: 30px;
    border: 2px solid #cccccc;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    background-color: #f2f2f2;
}

#history-display {
    height: 30%;
    font-size: 30px;
    display: flex;
    align-items: center;
    color: #555555;
}

#default-display {
    height: 70%;
    font-size: 50px;
    display: flex;
    align-items: center;
}

.buttons {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
}

.buttons-row {
    width: 100%;
    height: 20%;
    margin: 0px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    gap: 5%;
}

.button {
    border: 0px;
    width: 60px;
    height: 60px;
    border-radius: 50%;
    box-sizing: border-box;
    font-size: 25px;
    font-weight: bold;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #ffffff;
    background-color: #4d4d4d;
}

.button:hover {
    background-color: #bfbfbf;
}

.button:active {
    background-color: #878787;
}

.operator-buttons {
    background-color: #ffa726;;
}

.clear-button {
  background-color: #ef5350;
  color: #ffffff;
}

.footer {
    margin-top: auto;
    padding: 20px 0px;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    font-size: 25px;
    font-weight: 100px;
}

a {
    color: inherit;
    text-decoration: none;
}

a:hover {
    color: inherit;
    text-decoration: underline;
}

